Minor config fixes

--- a/bending-paper/src/main/resources/default.conf
+++ b/bending-paper/src/main/resources/default.conf
@@ -55,9 +55,15 @@ properties {
     }
     disabled-worlds=[]
 }
+protection {
+    WorldGuard=true
+    GriefPrevention=true
+    Towny=true
+    allow-harmless=true
+}
 storage {
     engine=H2
-    postgresql {
+    connection {
         database=bending
         host=localhost
         port=5432
