Config cleanup, fireburst fixes

--- a/bending-paper/src/main/resources/default.conf
+++ b/bending-paper/src/main/resources/default.conf
@@ -5,9 +5,13 @@ abilities {
                 enabled=true
                 speed-amplifier=2
                 jump-amplifier=2
+                description=""
+                instructions=""
             }
             gracefuldescent {
                 enabled=true
+                description=""
+                instructions=""
             }
         }
         airswipe {
@@ -27,6 +31,8 @@ abilities {
                 # How many milliseconds it takes to fully charge
                 max-time=2500
             }
+            description=""
+            instructions=""
         }
     }
     fire {
@@ -44,6 +50,39 @@ abilities {
                 # How many milliseconds it takes to fully charge
                 max-time=2000
             }
+             description=""
+             instructions=""
+        }
+        fireburst {
+            enabled=true
+            cooldown=0
+            charge-time=3000
+            sphere {
+                range=12
+            }
+            sphere {
+                range=16
+            }
+            description=""
+            instructions=""
+        }
+        heatcontrol {
+            enabled=true
+            extinguish {
+                cooldown=500
+                range=20
+                radius=7
+            }
+            melt {
+                cooldown=500
+                range=15
+                radius=5
+            }
+            cook {
+                duration = 1000
+            }
+            description=""
+            instructions=""
         }
     }
 }
