Improve default config handling and add new values

--- a/bending-paper/src/main/resources/default.conf
+++ b/bending-paper/src/main/resources/default.conf
@@ -34,6 +34,37 @@ abilities {
             description=""
             instructions=""
         }
+        airblast {
+            enabled=true
+            cooldown=1500
+            range=25
+            # The amount of blocks the blast advances every tick.
+            speed=1.25
+            ability-collision-radius=1
+            select {
+                out-of-range=35
+                range=10
+            }
+            push {
+                other=3
+                self=2.5
+            }
+            description=""
+            instructions=""
+        }
+        airburst {
+            enabled=true
+            cooldown=0
+            charge-time=3500
+            sphere {
+                range=12
+            }
+            cone {
+                range=16
+            }
+            description=""
+            instructions=""
+        }
     }
     fire {
         fireblast {
