Fixes for airblast, airburst

--- a/bending-paper/src/main/resources/default.conf
+++ b/bending-paper/src/main/resources/default.conf
@@ -56,12 +56,9 @@ abilities {
             enabled=true
             cooldown=0
             charge-time=3500
-            sphere {
-                range=12
-            }
-            cone {
-                range=16
-            }
+            cone-range=16
+            sphere-range=12
+            fall-threshold=10
             description=""
             instructions=""
         }
@@ -88,12 +85,8 @@ abilities {
             enabled=true
             cooldown=0
             charge-time=3000
-            sphere {
-                range=12
-            }
-            sphere {
-                range=16
-            }
+            cone-range=16
+            sphere-range=12
             description=""
             instructions=""
         }
