--- a/bending-paper/src/main/resources/default.conf
+++ b/bending-paper/src/main/resources/default.conf
@@ -108,6 +108,30 @@ abilities {
             description=""
             instructions=""
         }
+        fireshield {
+            enabled=true
+            cooldown=500
+            fire-ticks=40
+            disk {
+                duration=1000
+                radius=2
+                range=1.5
+            }
+            shield {
+                radius=3
+            }
+            description=""
+            instructions=""
+        }
+        bolt {
+            enabled=true
+            cooldown=1500
+            damage=3
+            range=20
+            charge-time=2000
+            description=""
+            instructions=""
+        }
     }
 }
 properties {
