Add FireSpin, FireWheel

--- a/bending-paper/src/main/resources/default.conf
+++ b/bending-paper/src/main/resources/default.conf
@@ -20,7 +20,7 @@ abilities {
             damage=2
             range=14
             speed=0.8
-            ability-collision-radius=0.5
+            collision-radius=0.5
             # How large the entire arc is in degrees
             arc=32
             # How many degrees apart each stream is in the arc
@@ -40,7 +40,7 @@ abilities {
             range=25
             # The amount of blocks the blast advances every tick.
             speed=1.25
-            ability-collision-radius=1
+            collision-radius=1
             select {
                 out-of-range=35
                 range=10
@@ -71,7 +71,7 @@ abilities {
             range=20
             speed=0.8
             ignite-radius=1.5
-            ability-collision-radius=1.4
+            collision-radius=1.4
             charge {
                 # How much the damage, radius, range and speed are multiplied by at full charge
                 factor=1.5
