--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -77,6 +77,7 @@ permissions:
       bending.ability.EarthGlove: true
       bending.ability.EarthLine: true
       bending.ability.EarthShot: true
+      bending.ability.EarthSmash: true
       bending.ability.EarthTunnel: true
       bending.ability.LavaDisk: true
       bending.ability.MetalCable: true
