--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,22 +2,22 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
 name: Build
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ 11, 16 ]
+      fail-fast: true
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 14
-      uses: actions/setup-java@v1
+    - name: JDK ${{ matrix.java }}
+      uses: actions/setup-java@v2
       with:
-        java-version: 14
+        java-version: ${{ matrix.java }}
+        distribution: 'adopt'
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
