--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 16, 11 ]
+        java: [ 16 ]
       fail-fast: true
     steps:
     - uses: actions/checkout@v2
