--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,13 +12,12 @@ jobs:
         java: [ 16 ]
       fail-fast: true
     steps:
-    - uses: actions/checkout@v2
-    - name: JDK ${{ matrix.java }}
-      uses: actions/setup-java@v2
-      with:
-        java-version: ${{ matrix.java }}
-        distribution: 'adopt'
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - uses: actions/checkout@v2
+      - name: JDK ${{ matrix.java }}
+        uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java }}
+          cache: 'gradle'
+          distribution: 'adopt'
+      - name: Build with Gradle
+        run: ./gradlew build --no-daemon
