--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -56,6 +56,8 @@ permissions:
       bending.ability.DensityShift: true
       bending.ability.EarthCling: true
       bending.ability.FerroControl: true
+      bending.ability.EarthPillars: true
+      bending.ability.EarthShards: true
       bending.ability.Bulwark: true
       bending.ability.Catapult: true
       bending.ability.Collapse: true
