Move schemas to own dir

--- a/bending-paper/src/main/resources/plugin.yml
+++ b/bending-paper/src/main/resources/plugin.yml
@@ -77,6 +77,7 @@ permissions:
       bending.ability.EarthSurf: true
       bending.ability.EarthTunnel: true
       bending.ability.LavaDisk: true
+      bending.ability.LavaFlux: true
       bending.ability.MetalCable: true
       bending.ability.RaiseEarth: true
       bending.ability.Shockwave: true
