--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,9 +9,9 @@ cloud-snapshot = "1.8.0-SNAPSHOT"
 bstats = "3.0.0"
 paper = "1.19.2-R0.1-SNAPSHOT"
 sponge = "10.0.0-SNAPSHOT"
-minecraft = "1.19.2"
+minecraft = "1.19.3"
 fabric-loom = "1.0-SNAPSHOT"
-fabric-api = "0.72.0+1.19.2"
+fabric-api = "0.72.0+1.19.3"
 fabric-loader = "0.14.12"
 shadow = "7.1.2"
 
@@ -71,7 +71,7 @@ hsql = { module = "org.hsqldb:hsqldb", version = "2.7.1" }
 fabric-minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
-fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.0.0-pre.1+1.19.2" }
+fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.0.0-pre.2+1.19.3" }
 
 # Bukkit
 paper = { module = "io.papermc.paper:paper-api", version.ref = "paper" }
@@ -91,8 +91,7 @@ shadow = { module = "gradle.plugin.com.github.johnrengelman:shadow", version.ref
 cloud = ["cloud-core", "cloud-minecraft"]
 drivers-local = ["sqlite", "h2", "hsql"]
 drivers-remote = ["mysql", "mariadb", "postgresql"]
-drivers-bukkit = ["mariadb", "postgresql", "h2", "hsql"]
-drivers-extended = ["mysql", "mariadb", "postgresql", "h2", "hsql"]
+drivers-nonstandard = ["mariadb", "postgresql", "h2", "hsql"]
 
 [plugins]
 jmh = { id = "me.champeau.jmh", version = "0.6.8" }
