--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,10 +11,10 @@ paper = "1.19.2-R0.1-SNAPSHOT"
 sponge-api = "10.0.0-SNAPSHOT"
 sponge-common = "1.19.3-10.0.0-SNAPSHOT"
 minecraft = "1.19.3"
-fabric-loom = "1.1.9"
+fabric-loom = "1.1-SNAPSHOT"
 fabric-api = "0.75.3+1.19.4"
 fabric-loader = "0.14.17"
-shadow = "7.1.2"
+shadow = "8.1.0"
 vanilla-gradle = "0.2.1-SNAPSHOT"
 
 [libraries]
@@ -30,7 +30,7 @@ tasker-minestom = { module = "me.moros:tasker-minestom", version.ref = "tasker" 
 
 javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
-articdata = { module = "de.articdive:articdata", version = "1.19-88313627" }
+articdata = { module = "de.articdive:articdata", version = "1.19.3-ea3a049e" }
 caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version = "3.1.5" }
 guava = { module = "com.google.guava:guava", version = "31.1-jre" }
 jdbi = { module = "org.jdbi:jdbi3-core", version = "3.37.1" }
@@ -86,7 +86,7 @@ sponge-api = { module = "org.spongepowered:spongeapi", version.ref = "sponge-api
 sponge-common = { module = "org.spongepowered:sponge", version.ref = "sponge-common"}
 sponge-mixin = { module = "org.spongepowered:mixin", version = "0.8.5" }
 
-shadow = { module = "gradle.plugin.com.github.johnrengelman:shadow", version.ref = "shadow" }
+shadow = { module = "com.github.johnrengelman:shadow", version.ref = "shadow" }
 vanilla = { module = "org.spongepowered:vanillagradle", version.ref = "vanilla-gradle" }
 
 [bundles]
