--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,13 +4,13 @@ tasker = "1.0.0-SNAPSHOT"
 adventure = "4.12.0"
 adventure-fabric = "5.6.1"
 configurate = "4.1.2"
-cloud = "1.8.2"
+cloud = "1.8.3"
 cloud-snapshot = "1.8.0-SNAPSHOT"
 bstats = "3.0.1"
 paper = "1.19.2-R0.1-SNAPSHOT"
 sponge-api = "10.0.0-SNAPSHOT"
 sponge-common = "1.19.3-10.0.0-SNAPSHOT"
-minecraft = "1.19.3"
+minecraft = "1.19.4"
 fabric-loom = "1.1-SNAPSHOT"
 fabric-api = "0.75.3+1.19.4"
 fabric-loader = "0.14.17"
@@ -68,7 +68,7 @@ hsql = { module = "org.hsqldb:hsqldb", version = "2.7.1" }
 fabric-minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
-fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.0.0-pre.4+1.19.3" }
+fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.0.0-rc.1+1.19.3" }
 sgui = { module = "eu.pb4:sgui", version = "1.2.1+1.19.3" }
 fabric-permissions = { module = "me.lucko:fabric-permissions-api", version = "0.2-SNAPSHOT" }
 
