--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
 math = "2.0.0-SNAPSHOT"
 tasker = "1.0.0-SNAPSHOT"
-adventure = "4.12.0"
+adventure = "4.13.1"
 adventure-fabric = "5.8.0"
 configurate = "4.1.2"
 cloud = "1.8.3"
 cloud-snapshot = "1.8.0-SNAPSHOT"
 bstats = "3.0.2"
-paper = "1.19.2-R0.1-SNAPSHOT"
+paper = "1.19.4-R0.1-SNAPSHOT"
 sponge-api = "10.0.0-SNAPSHOT"
 sponge-common = "1.19.4-10.0.0-SNAPSHOT"
 minecraft = "1.19.4"
 fabric-loom = "1.1-SNAPSHOT"
-fabric-api = "0.77.2+1.20"
+fabric-api = "0.79.0+1.19.4"
 fabric-loader = "0.14.19"
 shadow = "8.1.1"
 vanilla-gradle = "0.2.1-SNAPSHOT"
@@ -30,7 +30,7 @@ tasker-minestom = { module = "me.moros:tasker-minestom", version.ref = "tasker" 
 
 javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
-articdata = { module = "de.articdive:articdata", version = "1.19.3-ea3a049e" }
+articdata = { module = "de.articdive:articdata", version = "1.19.4-9ab279cf" }
 caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version = "3.1.5" }
 guava = { module = "com.google.guava:guava", version = "31.1-jre" }
 jdbi = { module = "org.jdbi:jdbi3-core", version = "3.37.1" }
@@ -68,7 +68,7 @@ hsql = { module = "org.hsqldb:hsqldb", version = "2.7.1" }
 fabric-minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
-fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.0.0-rc.1+1.19.3" }
+fabric-placeholder = { module = "eu.pb4:placeholder-api", version = "2.1.0+1.19.4" }
 sgui = { module = "eu.pb4:sgui", version = "1.2.1+1.19.3" }
 fabric-permissions = { module = "me.lucko:fabric-permissions-api", version = "0.2-SNAPSHOT" }
 
