--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,8 +11,8 @@ paper = "1.19.4-R0.1-SNAPSHOT"
 sponge-api = "10.0.0-SNAPSHOT"
 sponge-common = "1.19.4-10.0.0-SNAPSHOT"
 minecraft = "1.19.4"
-fabric-loom = "1.2.7"
-fabric-api = "0.80.1+1.20"
+fabric-loom = "1.2-SNAPSHOT"
+fabric-api = "0.80.0+1.19.4"
 fabric-loader = "0.14.19"
 shadow = "8.1.1"
 vanilla-gradle = "0.2.1-SNAPSHOT"
@@ -30,7 +30,7 @@ tasker-minestom = { module = "me.moros:tasker-minestom", version.ref = "tasker" 
 
 javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
-articdata = { module = "de.articdive:articdata", version = "1.19-88313627" }
+articdata = { module = "de.articdive:articdata", version = "1.19.4-9ab279cf" }
 caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version = "3.1.6" }
 guava = { module = "com.google.guava:guava", version = "31.1-jre" }
 jdbi = { module = "org.jdbi:jdbi3-core", version = "3.38.2" }
