Add display entity support. Smoother animations for multiple abilities

--- a/paper/src/main/resources/paper-plugin.yml
+++ b/paper/src/main/resources/paper-plugin.yml
@@ -4,7 +4,7 @@ main: me.moros.bending.paper.BendingBootstrap
 author: Moros
 description: Bending plugin for PaperMC.
 website: https://github.com/PrimordialMoros/Bending
-api-version: 1.19
+api-version: "1.19"
 dependencies:
   - name: PlaceholderAPI
     required: false
