--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,5 +19,7 @@ jobs:
           java-version: ${{ matrix.java }}
           cache: 'gradle'
           distribution: 'temurin'
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
       - name: Build with Gradle
         run: ./gradlew build --no-daemon
