--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,6 @@ fabric-loom = "1.3.8"
 fabric-api = "0.85.0+1.20.1"
 fabric-loader = "0.14.21"
 shadow = "8.1.1"
-vanilla-gradle = "0.2.1-SNAPSHOT"
 
 [libraries]
 storage = { module = "me.moros:storage", version = "3.2.0" }
@@ -57,7 +56,7 @@ cloud-fabric = { module = "cloud.commandframework:cloud-fabric", version.ref = "
 cloud-sponge = { module = "cloud.commandframework:cloud-sponge", version.ref = "cloud-snapshot" }
 
 # Databases
-mysql = { module = "mysql:mysql-connector-java", version = "8.0.33" }
+mysql = { module = "com.mysql:mysql-connector-java", version = "8.0.33" }
 mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version = "3.1.4" }
 postgresql = { module = "org.postgresql:postgresql", version = "42.6.0" }
 sqlite = { module = "org.xerial:sqlite-jdbc", version = "3.42.0.0" }
@@ -75,7 +74,7 @@ fabric-permissions = { module = "me.lucko:fabric-permissions-api", version = "0.
 # Bukkit
 paper = { module = "io.papermc.paper:paper-api", version.ref = "paper" }
 inventory-framework = { module = "com.github.stefvanschie.inventoryframework:IF", version = "0.10.11" }
-grief-prevention = { module = "com.github.TechFOrtress:GriefPrevention", version = "16.18.1" }
+grief-prevention = { module = "com.github.TechFortress:GriefPrevention", version = "16.18.1" }
 towny = { module = "com.palmergames.bukkit.towny:towny", version = "0.99.5.0" }
 lwc = { module = "com.griefcraft:lwc", version = "2.3.0" }
 worldguard-bukkit = { module = "com.sk89q.worldguard:worldguard-bukkit", version = "7.0.8" }
@@ -87,7 +86,9 @@ sponge-common = { module = "org.spongepowered:sponge", version.ref = "sponge-com
 sponge-mixin = { module = "org.spongepowered:mixin", version = "0.8.5" }
 
 shadow = { module = "com.github.johnrengelman:shadow", version.ref = "shadow" }
-vanilla = { module = "org.spongepowered:vanillagradle", version.ref = "vanilla-gradle" }
+vanilla = { module = "org.spongepowered:vanillagradle", version = "0.2.1-SNAPSHOT" }
+minotaur = { module = "com.modrinth.minotaur:Minotaur", version = "2.8.2" }
+checker = { module = "org.checkerframework:checkerframework-gradle-plugin", version = "0.6.29" }
 
 [bundles]
 cloud = ["cloud-core", "cloud-minecraft"]
@@ -98,9 +99,8 @@ drivers-nonstandard = ["mariadb", "postgresql", "h2", "hsql"]
 
 [plugins]
 jmh = { id = "me.champeau.jmh", version = "0.7.1" }
-checker = { id = "org.checkerframework", version = "0.6.29" }
-shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
 fabric-loom = { id = "fabric-loom", version.ref = "fabric-loom" }
 userdev = { id = "io.papermc.paperweight.userdev", version = "1.5.5" }
 sponge = { id = "org.spongepowered.gradle.plugin", version = "2.1.1" }
-vanilla = { id = "org.spongepowered.gradle.vanilla", version.ref = "vanilla-gradle" }
+hangar = { id = "io.papermc.hangar-publish-plugin", version = "0.0.5" }
+run-paper = { id = "xyz.jpenilla.run-paper", version = "2.1.0" }
