--- a/paper/src/main/resources/paper-plugin.yml
+++ b/paper/src/main/resources/paper-plugin.yml
@@ -14,6 +14,9 @@ dependencies:
     PlaceholderAPI:
       load: BEFORE
       required: false
+    MiniPlaceholders:
+      load: BEFORE
+      required: false
     GriefPrevention:
       load: BEFORE
       required: false
