--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,16 +22,15 @@ storage = { module = "me.moros:storage", version = "3.2.0" }
 math-core = { module = "me.moros:math-core", version.ref = "math" }
 
 tasker-core = { module = "me.moros:tasker-core", version.ref = "tasker" }
-tasker-bukkit = { module = "me.moros:tasker-bukkit", version.ref = "tasker" }
+tasker-bukkit = { module = "me.moros:tasker-paper", version.ref = "tasker" }
 tasker-sponge = { module = "me.moros:tasker-sponge", version.ref = "tasker" }
 tasker-fabric = { module = "me.moros:tasker-fabric", version.ref = "tasker" }
-tasker-minestom = { module = "me.moros:tasker-minestom", version.ref = "tasker" }
 
 javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
 articdata = { module = "de.articdive:articdata", version = "1.20.1-77b86bc4" }
 caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version = "3.1.7" }
-guava = { module = "com.google.guava:guava", version = "32.1.1-jre" }
+guava = { module = "com.google.guava:guava", version = "32.1.2-jre" }
 jdbi = { module = "org.jdbi:jdbi3-core", version = "3.39.1" }
 hikari = { module = "com.zaxxer:HikariCP", version = "5.0.1" }
 eventbus = { module = "net.kyori:event-api", version = "5.0.0-SNAPSHOT" }
@@ -58,7 +57,7 @@ cloud-fabric = { module = "cloud.commandframework:cloud-fabric", version.ref = "
 cloud-sponge = { module = "cloud.commandframework:cloud-sponge", version.ref = "cloud-snapshot" }
 
 # Databases
-mysql = { module = "mysql:mysql-connector-java", version = "8.0.33" }
+mysql = { module = "mysql:mysql-connector-j", version = "8.1.0" }
 mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version = "3.1.4" }
 postgresql = { module = "org.postgresql:postgresql", version = "42.6.0" }
 sqlite = { module = "org.xerial:sqlite-jdbc", version = "3.42.0.0" }
@@ -79,7 +78,7 @@ inventory-framework = { module = "com.github.stefvanschie.inventoryframework:IF"
 grief-prevention = { module = "com.github.TechFortress:GriefPrevention", version = "16.18.1" }
 towny = { module = "com.palmergames.bukkit.towny:towny", version = "0.99.5.0" }
 lwc = { module = "com.griefcraft:lwc", version = "2.3.0" }
-worldguard-bukkit = { module = "com.sk89q.worldguard:worldguard-bukkit", version = "7.0.8" }
+worldguard = { module = "com.sk89q.worldguard:worldguard-bukkit", version = "7.0.9" }
 papi = { module = "me.clip:placeholderapi", version = "2.11.3" }
 
 # Sponge
@@ -91,7 +90,7 @@ sponge-mixin = { module = "org.spongepowered:mixin", version = "0.8.5" }
 shadow = { module = "com.github.johnrengelman:shadow", version.ref = "shadow" }
 vanilla = { module = "org.spongepowered:vanillagradle", version = "0.2.1-SNAPSHOT" }
 minotaur = { module = "com.modrinth.minotaur:Minotaur", version = "2.8.3" }
-checker = { module = "org.checkerframework:checkerframework-gradle-plugin", version = "0.6.29" }
+checker = { module = "org.checkerframework:checkerframework-gradle-plugin", version = "0.6.30" }
 
 [bundles]
 cloud = ["cloud-core", "cloud-minecraft"]
