--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ tasker = "1.0.1"
 adventure = "4.16.0"
 adventure-fabric = "5.12.0"
 configurate = "4.1.2"
-cloud = "2.0.0-SNAPSHOT"
+cloud = "2.0.0-beta.3"
 cloud-snapshot = "1.8.0-SNAPSHOT"
 bstats = "3.0.2"
 paper = "1.20.4-R0.1-SNAPSHOT"
