--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ math = "2.0.0"
 tasker = "1.0.1"
 adventure = "4.16.0"
 adventure-fabric = "5.12.0"
-configurate = "4.1.2"
+configurate = "4.2.0-SNAPSHOT"
 cloud = "2.0.0-beta.4"
 cloud-snapshot = "1.8.0-SNAPSHOT"
 bstats = "3.0.2"
