--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,10 +5,9 @@ adventure = "4.17.0"
 adventure-fabric = "5.13.0"
 configurate = "4.2.0-SNAPSHOT"
 cloud = "2.0.0-SNAPSHOT"
-cloud-snapshot = "1.8.0-SNAPSHOT"
 bstats = "3.0.2"
 sponge-api = "11.0.0-SNAPSHOT"
-sponge-common = "1.20.1-11.0.0-SNAPSHOT"
+sponge-common = "1.20.6-11.0.0-SNAPSHOT"
 minecraft = "1.20.6"
 fabric-loom = "1.6.11"
 fabric-api = "0.98.0+1.20.6"
@@ -60,7 +59,7 @@ cloud-core = { module = "org.incendo:cloud-core", version.ref = "cloud" }
 cloud-minecraft = { module = "org.incendo:cloud-minecraft-extras", version.ref = "cloud" }
 cloud-paper = { module = "org.incendo:cloud-paper", version.ref = "cloud" }
 cloud-fabric = { module = "org.incendo:cloud-fabric", version.ref = "cloud" }
-cloud-sponge = { module = "cloud.commandframework:cloud-sponge", version.ref = "cloud-snapshot" }
+cloud-sponge = { module = "org.incendo:cloud-sponge", version.ref = "cloud" }
 
 # Databases
 mysql = { module = "com.mysql:mysql-connector-j", version = "8.4.0" }
@@ -92,7 +91,7 @@ sponge-mixin = { module = "org.spongepowered:mixin", version = "0.8.6" }
 
 # Plugins for build-logic
 shadow = { module = "com.github.johnrengelman:shadow", version.ref = "shadow" }
-vanilla = { module = "org.spongepowered:vanillagradle", version = "0.2.1-SNAPSHOT" }
+sponge-vanilla = { module = "org.spongepowered:vanillagradle", version = "0.2.1-SNAPSHOT" }
 minotaur = { module = "com.modrinth.minotaur:Minotaur", version = "2.8.7" }
 checker = { module = "org.checkerframework:checkerframework-gradle-plugin", version = "0.6.39" }
 
@@ -108,7 +107,6 @@ junit = ["junit-api", "junit-engine"]
 [plugins]
 jmh = { id = "me.champeau.jmh", version = "0.7.2" }
 fabric-loom = { id = "fabric-loom", version.ref = "fabric-loom" }
-userdev = { id = "io.papermc.paperweight.userdev", version = "1.7.1" }
-sponge = { id = "org.spongepowered.gradle.plugin", version = "2.2.0" }
+paperweight-userdev = { id = "io.papermc.paperweight.userdev", version = "1.7.1" }
 hangar = { id = "io.papermc.hangar-publish-plugin", version = "0.1.2" }
 run-paper = { id = "xyz.jpenilla.run-paper", version = "2.3.0" }
